--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+LinkingTo: 
+    Rcpp
+Imports: 
+    Rcpp
