Improve color class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method("$",camera_2d)
 S3method("$",camera_3d)
+S3method("$",color)
 S3method("$",glyph_info)
 S3method("$",material_map)
 S3method("$",npatch_info)
@@ -11,6 +12,7 @@ S3method("$",sound)
 S3method("$",texture)
 S3method("$<-",camera_2d)
 S3method("$<-",camera_3d)
+S3method("$<-",color)
 S3method("$<-",glyph_info)
 S3method("$<-",material_map)
 S3method("$<-",npatch_info)
@@ -20,6 +22,7 @@ S3method("$<-",sound)
 S3method("$<-",texture)
 S3method("[",camera_2d)
 S3method("[",camera_3d)
+S3method("[",color)
 S3method("[",glyph_info)
 S3method("[",material_map)
 S3method("[",npatch_info)
@@ -29,6 +32,7 @@ S3method("[",sound)
 S3method("[",texture)
 S3method("[<-",camera_2d)
 S3method("[<-",camera_3d)
+S3method("[<-",color)
 S3method("[<-",glyph_info)
 S3method("[<-",material_map)
 S3method("[<-",npatch_info)
@@ -38,6 +42,7 @@ S3method("[<-",sound)
 S3method("[<-",texture)
 S3method("[[",camera_2d)
 S3method("[[",camera_3d)
+S3method("[[",color)
 S3method("[[",glyph_info)
 S3method("[[",material_map)
 S3method("[[",npatch_info)
@@ -47,6 +52,7 @@ S3method("[[",sound)
 S3method("[[",texture)
 S3method("[[<-",camera_2d)
 S3method("[[<-",camera_3d)
+S3method("[[<-",color)
 S3method("[[<-",glyph_info)
 S3method("[[<-",material_map)
 S3method("[[<-",npatch_info)
@@ -56,6 +62,7 @@ S3method("[[<-",sound)
 S3method("[[<-",texture)
 S3method(.DollarNames,camera_2d)
 S3method(.DollarNames,camera_3d)
+S3method(.DollarNames,color)
 S3method(.DollarNames,glyph_info)
 S3method(.DollarNames,material_map)
 S3method(.DollarNames,npatch_info)
@@ -65,6 +72,7 @@ S3method(.DollarNames,sound)
 S3method(.DollarNames,texture)
 S3method(as.character,camera_2d)
 S3method(as.character,camera_3d)
+S3method(as.character,color)
 S3method(as.character,glyph_info)
 S3method(as.character,material_map)
 S3method(as.character,npatch_info)
@@ -74,6 +82,7 @@ S3method(as.character,sound)
 S3method(as.character,texture)
 S3method(print,camera_2d)
 S3method(print,camera_3d)
+S3method(print,color)
 S3method(print,glyph_info)
 S3method(print,material_map)
 S3method(print,npatch_info)
@@ -81,6 +90,7 @@ S3method(print,rectangle)
 S3method(print,render_texture)
 S3method(print,sound)
 S3method(print,texture)
+export(as_color)
 export(begin_drawing)
 export(begin_mode_2d)
 export(begin_mode_3d)
