Move `as` and `wrap` implementations into their corresponding cpp files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -174,7 +174,6 @@ export(draw_circle_lines)
 export(draw_circle_sector)
 export(draw_circle_sector_lines)
 export(draw_circle_v)
-export(draw_circles)
 export(draw_cube)
 export(draw_cube_texture)
 export(draw_cube_texture_rec)
@@ -371,6 +370,8 @@ export(image_to_pot)
 export(init_audio_device)
 export(init_window)
 export(is_audio_device_ready)
+export(is_audio_stream)
+export(is_bone_info)
 export(is_bool)
 export(is_bounding_box)
 export(is_camera_2d)
@@ -380,6 +381,7 @@ export(is_cursor_hidden)
 export(is_cursor_on_screen)
 export(is_file_dropped)
 export(is_float)
+export(is_font)
 export(is_gamepad_available)
 export(is_gamepad_button_down)
 export(is_gamepad_button_pressed)
@@ -387,16 +389,22 @@ export(is_gamepad_button_released)
 export(is_gamepad_button_up)
 export(is_gesture_detected)
 export(is_glyph_info)
+export(is_image)
 export(is_int)
 export(is_key_down)
 export(is_key_pressed)
 export(is_key_released)
 export(is_key_up)
+export(is_material)
 export(is_material_map)
+export(is_mesh)
+export(is_model)
+export(is_model_animation)
 export(is_mouse_button_down)
 export(is_mouse_button_pressed)
 export(is_mouse_button_released)
 export(is_mouse_button_up)
+export(is_music)
 export(is_music_stream_playing)
 export(is_npatch_info)
 export(is_number)
@@ -405,6 +413,7 @@ export(is_ray_collision)
 export(is_raylib_matrix)
 export(is_rectangle)
 export(is_render_texture)
+export(is_shader)
 export(is_sound)
 export(is_sound_playing)
 export(is_texture)
@@ -413,6 +422,9 @@ export(is_unsigned_int)
 export(is_vector_2)
 export(is_vector_3)
 export(is_vector_4)
+export(is_vr_device_info)
+export(is_vr_stereo_config)
+export(is_wave)
 export(is_window_focused)
 export(is_window_fullscreen)
 export(is_window_hidden)
