--- a/NAMESPACE
+++ b/NAMESPACE
@@ -132,6 +132,7 @@ export(begin_drawing)
 export(begin_mode_2d)
 export(begin_mode_3d)
 export(begin_scissor_mode)
+export(begin_shader_mode)
 export(begin_texture_mode)
 export(bounding_box)
 export(camera_2d)
@@ -164,6 +165,7 @@ export(color_from_normalized)
 export(color_normalize)
 export(color_to_hsv)
 export(color_to_int)
+export(directory_exists)
 export(disable_cursor)
 export(draw_billboard)
 export(draw_bounding_box)
@@ -251,6 +253,7 @@ export(end_vr_stereo_mode)
 export(export_image)
 export(export_image_as_code)
 export(fade)
+export(file_exists)
 export(flag)
 export(gen_image_cellular)
 export(gen_image_checked)
@@ -312,6 +315,8 @@ export(get_random_value)
 export(get_screen_height)
 export(get_screen_to_world_2d)
 export(get_screen_width)
+export(get_shader_location)
+export(get_shader_location_attrib)
 export(get_sounds_playing)
 export(get_time)
 export(get_touch_point_count)
@@ -380,6 +385,7 @@ export(is_color)
 export(is_cursor_hidden)
 export(is_cursor_on_screen)
 export(is_file_dropped)
+export(is_file_extension)
 export(is_float)
 export(is_font)
 export(is_gamepad_available)
@@ -434,6 +440,7 @@ export(is_window_ready)
 export(is_window_resized)
 export(is_window_state)
 export(key)
+export(load_file_text)
 export(load_font)
 export(load_font_ex)
 export(load_font_from_image)
@@ -443,8 +450,12 @@ export(load_image_from_texture)
 export(load_image_raw)
 export(load_model)
 export(load_music_stream)
+export(load_render_texture)
+export(load_shader)
+export(load_shader_from_memory)
 export(load_sound)
 export(load_sound_from_wave)
+export(load_storage_value)
 export(load_texture)
 export(load_texture_from_image)
 export(load_wave)
@@ -469,8 +480,10 @@ export(render_texture)
 export(restore_window)
 export(resume_music_stream)
 export(resume_sound)
+export(save_storage_value)
 export(seek_music_stream)
 export(set_camera_alt_control)
+export(set_camera_mode)
 export(set_camera_move_controls)
 export(set_camera_pan_control)
 export(set_camera_smooth_zoom_control)
@@ -484,6 +497,9 @@ export(set_mouse_position)
 export(set_mouse_scale)
 export(set_music_pitch)
 export(set_music_volume)
+export(set_shader_value)
+export(set_shader_value_matrix)
+export(set_shader_value_texture)
 export(set_shapes_texture)
 export(set_sound_pitch)
 export(set_sound_volume)
@@ -498,14 +514,16 @@ export(set_window_position)
 export(set_window_size)
 export(set_window_state)
 export(set_window_title)
+export(shader_uniform)
 export(show_cursor)
 export(sound)
 export(stop_music_stream)
 export(stop_sound)
 export(stop_sound_multi)
 export(take_screenshot)
-export(text_append)
 export(text_find_index)
+export(text_insert)
+export(text_replace)
 export(text_to_integer)
 export(text_to_lower)
 export(text_to_pascal)
@@ -520,8 +538,12 @@ export(unload_image_colors)
 export(unload_image_palette)
 export(unload_model)
 export(unload_music_stream)
+export(unload_render_texture)
+export(unload_shader)
 export(unload_sound)
+export(unload_texture)
 export(unload_wave)
+export(update_camera)
 export(update_music_stream)
 export(vector_2_angle)
 export(vector_2_distance)
