Add support for models and add shader demo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -472,6 +472,7 @@ export(load_texture_from_image)
 export(load_wave)
 export(log)
 export(material_map)
+export(material_map_index)
 export(maximize_window)
 export(measure_text)
 export(measure_text_ex)
@@ -508,6 +509,7 @@ export(set_exit_key)
 export(set_gamepad_mappings)
 export(set_gestures_enabled)
 export(set_master_volume)
+export(set_model_texture)
 export(set_mouse_cursor)
 export(set_mouse_offset)
 export(set_mouse_position)
