Import case_when from dplyr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -572,6 +572,7 @@ export(vector_2_move_towards)
 export(vector_2_rotate)
 export(window_should_close)
 importFrom(Rcpp,sourceCpp)
+importFrom(dplyr,case_when)
 importFrom(glue,glue)
 importFrom(rlang,abort)
 importFrom(utils,.DollarNames)
