Add function `raylib_version()`. Fixes #3.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -489,6 +489,7 @@ export(play_sound)
 export(play_sound_multi)
 export(ray)
 export(ray_collision)
+export(raylib_version)
 export(rectangle)
 export(render_texture)
 export(restore_window)
