--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           r-version: ${{ matrix.r-version }}
       - name: Install dependencies
-        run: /usr/bin/sudo DEBIAN_FRONTEND=noninteractive apt-get install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libxcursor-dev 
+        run: /usr/bin/sudo DEBIAN_FRONTEND=noninteractive apt-get install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libxcursor-dev libgit2-dev
       - name: Install R-packages
         run: |
           install.packages(c("remotes", "devtools"))
