--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -13,6 +13,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  release:
+    types: [published]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -22,16 +25,25 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        r-version: ['3.6.3', '4.1.1']
+        r-version: ["3.6.3", "release"]
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up R ${{ matrix.r-version }}
-        uses: r-lib/actions/setup-r@f57f1301a053485946083d7a45022b278929a78a
+        uses: r-lib/actions/setup-r@v2
         with:
+          use-public-rspm: true
           r-version: ${{ matrix.r-version }}
+
       - name: Install dependencies
         run: /usr/bin/sudo DEBIAN_FRONTEND=noninteractive apt-get install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libxcursor-dev libgit2-dev libasound2-dev mesa-common-dev libx11-dev libxrandr-dev libxi-dev xorg-dev libgl1-mesa-dev libglu1-mesa-dev
+
+      # - name: Set up R ${{ matrix.r-version }}
+      #   uses: r-lib/actions/setup-r@f57f1301a053485946083d7a45022b278929a78a
+      #   with:
+      #     r-version: ${{ matrix.r-version }}
+
       - name: Install R-packages
         run: |
           install.packages(c("remotes", "devtools"))
